[metadata]
name = pecli
version = 0.1.4
author = Tek
author_email = tek@randhome.io
description = Another PE info tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Te-k/pecli
keywords = security, malware
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = ./
include_package_data = True
python_requires = >= 3.5
install_requires =
    pefile
    yara-python
    python-magic
    ipython
    virustotal-api >=1.1.11

[options.packages.find]
where = ./

[options.entry_points]
console_scripts =
    pecli = pecli.main:main

[flake8]
extend-ignore = E203
max-line-length = 120
exclude =
    .git,
    *Tests.py,
    __pycache__,
    venv,
    old,
    build,
    dist

[mypy]
ignore_missing_imports = True
